basic page layout

--- a/index.html
+++ b/index.html
@@ -12,11 +12,27 @@
         <title>Facebook Remake | News Feed</title>
 
         <!-- STYLESHEETS -->
-        <link rel="stylesheet" href="style/style.css" />
+        <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
-        <h1>Facebook</h1>
+        <div class="container">
+            <section id="nav-bar">NAV BAR</section>
+            <div id="messenger-bar-container">
+                <section id="messenger-bar">MESSENGER BAR</section>
+            </div>
 
+            <main id="main-container">
+                <section id="side-menu">SIDE MENU</section>
+                <section id="newsfeed">
+                    NEWSFEED
+                    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+                </section>
+                <div class="side-container">
+                    <section id="widgets-container">WIDGETS CONTAINER</section>
+                    <section id="footer">FOOTER</section>
+                </div>
+            </main>
+        </div>
         <!-- SCRIPTS -->
         <script src="js/main.js"></script>
     </body>
