basic nav-bar layout

--- a/index.html
+++ b/index.html
@@ -16,11 +16,67 @@
     </head>
     <body>
         <div class="container">
-            <section id="nav-bar">NAV BAR</section>
+            <div id="nav-bar-container">
+                <section id="nav-bar">
+                    <div class="logo-container">
+                        <a href="#">
+                            <span class="fb-icon fb-icon-logo hoverable"></span>
+                        </a>
+                    </div>
+                    <div class="search-bar">
+                        <input type="text" placeholder="Search" />
+                        <button class="btn">
+                            <span class="fb-icon fb-icon-search-dark"></span>
+                        </button>
+                    </div>
+                    <div class="nav-bar-menu">
+                        <div class="nav-bar-menu-item">
+                            <a href="#" class="btn-link silent-link">
+                                <div class="user-avatar rounded">
+                                    <img src="assets/user-avatar.png" />
+                                </div>
+                                <span>
+                                    Jelly
+                                </span>
+                            </a>
+                        </div>
+                        <div class="nav-bar-menu-item">
+                            <a href="#" class="btn-link silent-link">
+                                Home
+                            </a>
+                        </div>
+                        <div class="nav-bar-menu-item">
+                            <a href="#" class="btn-link silent-link">
+                                Create
+                            </a>
+                        </div>
+                        <div class="nav-bar-menu-item">
+                            <span
+                                class="fb-icon fb-icon-friends-dark clickable"
+                            >
+                            </span>
+                            <span
+                                class="fb-icon fb-icon-messages-dark clickable"
+                            >
+                            </span>
+                            <span
+                                class="fb-icon fb-icon-notification-dark clickable"
+                            >
+                            </span>
+                        </div>
+                        <div class="nav-bar-menu-item">
+                            <span class="fb-icon fb-icon-help-dark clickable">
+                            </span>
+                            <span class="fb-icon fb-icon-more-dark clickable">
+                            </span>
+                        </div>
+                    </div>
+                </section>
+            </div>
+
             <div id="messenger-bar-container">
                 <section id="messenger-bar">MESSENGER BAR</section>
             </div>
-
             <main id="main-container">
                 <section id="side-menu">SIDE MENU</section>
                 <section id="newsfeed">
