complete styling nav-bar

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <div class="search-bar">
                         <input type="text" placeholder="Search" />
                         <button class="btn">
-                            <span class="fb-icon fb-icon-search-dark"></span>
+                            <span class="fb-icon fb-icon-search"></span>
                         </button>
                     </div>
                     <div class="nav-bar-menu">
@@ -52,22 +52,22 @@
                         </div>
                         <div class="nav-bar-menu-item">
                             <span
-                                class="fb-icon fb-icon-friends-dark clickable"
+                                class="nav-button fb-icon fb-icon-friends clickable"
                             >
                             </span>
                             <span
-                                class="fb-icon fb-icon-messages-dark clickable"
+                                class="nav-button fb-icon fb-icon-messages clickable"
                             >
                             </span>
                             <span
-                                class="fb-icon fb-icon-notification-dark clickable"
+                                class="nav-button fb-icon fb-icon-notification clickable"
                             >
                             </span>
                         </div>
                         <div class="nav-bar-menu-item">
-                            <span class="fb-icon fb-icon-help-dark clickable">
+                            <span class="nav-button fb-icon fb-icon-help clickable">
                             </span>
-                            <span class="fb-icon fb-icon-more-dark clickable">
+                            <span class="nav-button fb-icon fb-icon-more clickable">
                             </span>
                         </div>
                     </div>
