create card component

--- a/index.html
+++ b/index.html
@@ -444,11 +444,26 @@
                     </div>
                 </section>
                 <section id="newsfeed">
-                    NEWSFEED
-                    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+                    <div class="card">
+                        <div class="card-header">
+                            Create post
+                        </div>
+                        <div class="card-body">
+                            What's on your mind, Jelly?
+                        </div>
+                    </div>
                 </section>
                 <div class="side-container">
-                    <section id="widgets-container">WIDGETS CONTAINER</section>
+                    <section id="widgets-container">
+                        <div class="card">
+                            <div class="card-header">
+                                Header
+                            </div>
+                            <div class="card-body">
+                                Body
+                            </div>
+                        </div>
+                    </section>
                     <section id="footer">FOOTER</section>
                 </div>
             </main>
