finish alerts widget

--- a/index.html
+++ b/index.html
@@ -455,12 +455,38 @@
                 </section>
                 <div class="side-container">
                     <section id="widgets-container">
-                        <div class="card">
-                            <div class="card-header">
-                                Header
-                            </div>
+                        <div class="alerts-container card">
                             <div class="card-body">
-                                Body
+                                <div class="alert">
+                                    <div class="fb-alert alert-body">
+                                        <img
+                                            class="fb-alert-icon"
+                                            src="assets/alert-icons/candy-crush.png"
+                                        />
+                                        <a class="alert-link " href="#"
+                                            ><strong>18 Requests</strong></a
+                                        >
+                                        <span class="alert-description"
+                                            >from Fish</span
+                                        >
+                                    </div>
+
+                                    <div class="alert-close"></div>
+                                </div>
+
+                                <div class="alert">
+                                    <div class="fb-alert alert-body">
+                                        <span
+                                            class="fb-alert-icon control-icon control-icon-birthday"
+                                        ></span>
+                                        <a class="alert-link " href="#"
+                                            ><strong>Fish</strong></a
+                                        >
+                                        <span class="alert-description"
+                                            >'s birthday is today</span
+                                        >
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </section>
