finish page summary in page widget

--- a/index.html
+++ b/index.html
@@ -489,6 +489,96 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div class="page-overview card">
+                            <div class="card-header transparent-with-border">
+                                <div class="page-selector">
+                                    <div>
+                                        <a class="silent-link" href="#">
+                                            Your Pages (<span
+                                                class="number-of-pages"
+                                                >2</span
+                                            >)
+                                        </a>
+                                        <i class="fb-icon fb-icon-down"></i>
+                                    </div>
+
+                                    <span
+                                        class="fb-icon fb-icon-more clickable"
+                                    ></span>
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                <div class="page-summary">
+                                    <div class="page-avatar">
+                                        <img src="assets/page-avatar.jpg" />
+                                    </div>
+                                    <div class="page-info">
+                                        <div class="page-name">
+                                            <a href="#">Developer Network</a>
+                                        </div>
+                                        <div class="page-attribute">
+                                            <span
+                                                class="page-attribute-icon page-icon page-icon-messages"
+                                            ></span>
+                                            <a
+                                                href="#"
+                                                class="page-attribute-caption silent-link"
+                                                >Messages</a
+                                            >
+                                        </div>
+
+                                        <div class="page-attribute">
+                                            <span
+                                                class="page-attribute-icon page-icon page-icon-notification"
+                                            ></span>
+                                            <a
+                                                href="#"
+                                                class="page-attribute-caption silent-link"
+                                            >
+                                                Notifications
+                                                <span class="badge">20+</span>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="page-actions">
+                                    <div class="page-action">
+                                        <i
+                                            class="action-icon page-icon page-icon-publish"
+                                        ></i>
+                                        <a href="#" class="action-caption">
+                                            Publish
+                                        </a>
+                                    </div>
+                                    <div class="page-action">
+                                        <i
+                                            class="action-icon page-icon page-icon-photo"
+                                        ></i>
+                                        <a href="#" class="action-caption">
+                                            Photo
+                                        </a>
+                                    </div>
+                                    <div class="page-action">
+                                        <i
+                                            class="action-icon page-icon page-icon-live"
+                                        ></i>
+                                        <a href="#" class="action-caption">
+                                            Live
+                                        </a>
+                                    </div>
+                                    <div class="page-action">
+                                        <img
+                                            class="action-icon" src="assets/page-invite.png"
+                                        ></>
+                                        <a href="#" class="action-caption">
+                                            Invite
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </section>
                     <section id="footer">FOOTER</section>
                 </div>
