finish your page widget

--- a/index.html
+++ b/index.html
@@ -570,11 +570,60 @@
                                     </div>
                                     <div class="page-action">
                                         <img
-                                            class="action-icon" src="assets/page-invite.png"
-                                        ></>
+                                            class="action-icon"
+                                            src="assets/page-invite.png"
+                                        />
                                         <a href="#" class="action-caption">
                                             Invite
                                         </a>
+                                    </div>
+                                </div>
+
+                                <div class="page-analytics">
+                                    <div
+                                        class="page-property-selector btn-group"
+                                    >
+                                        <div
+                                            class="page-property btn transparent active"
+                                        >
+                                            Likes
+                                        </div>
+                                        <div
+                                            class="page-property btn transparent"
+                                        >
+                                            Views
+                                        </div>
+                                        <div
+                                            class="page-property btn transparent"
+                                        >
+                                            Posts
+                                        </div>
+                                    </div>
+                                    <div class="page-property-container">
+                                        <div class="page-property-content">
+                                            <a href="#">721</a>
+                                        </div>
+                                        <div class="page-property-small">
+                                            <a href="#"
+                                                >0 new likes this week</a
+                                            >
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="page-menu">
+                                    <div class="btn-group">
+                                        <div class="btn">
+                                            <span
+                                                class="page-icon page-icon-promotion"
+                                            ></span>
+                                            <span>&nbsp; Create Promotion</span>
+                                        </div>
+                                        <div class="btn more-button">
+                                            <span
+                                                class="fb-icon fb-icon-down"
+                                            ></span>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
