finish recent listing widget

--- a/index.html
+++ b/index.html
@@ -599,6 +599,7 @@
                                             Posts
                                         </div>
                                     </div>
+
                                     <div class="page-property-container">
                                         <div class="page-property-content">
                                             <a href="#">721</a>
@@ -626,6 +627,66 @@
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+
+                        <div class="card recent-listings">
+                            <div class="card-header transparent">
+                                <a href="#">
+                                    <span
+                                        class="control-icon control-icon-store"
+                                    ></span>
+                                    <span>Listings you recently viewed</span>
+                                </a>
+                            </div>
+                            <div class="card-body">
+                                <div class="listings-container">
+                                    <a class="listing" href="#">
+                                        <img
+                                            src="assets/listings/listings-1.jpg"
+                                        />
+                                        <span class="listing-price">$9.99</span>
+                                        <span
+                                            class="hide-button clickable"
+                                        ></span>
+                                    </a>
+
+                                    <a class="listing" href="#">
+                                        <img
+                                            src="assets/listings/listings-2.jpg"
+                                        />
+                                        <span class="listing-price">$499</span>
+                                        <span
+                                            class="hide-button clickable"
+                                        ></span>
+                                    </a>
+
+                                    <a class="listing" href="#">
+                                        <img
+                                            src="assets/listings/listings-3.jpeg"
+                                        />
+                                        <span class="listing-price"
+                                            >$1,564</span
+                                        >
+                                        <span
+                                            class="hide-button clickable"
+                                        ></span>
+                                    </a>
+
+                                    <a class="listing" href="#">
+                                        <img
+                                            src="assets/listings/listings-4.jpg"
+                                        />
+                                        <span class="listing-price"
+                                            >$4,000,000</span
+                                        >
+                                        <span
+                                            class="hide-button clickable"
+                                        ></span>
+                                    </a>
+                                </div>
+
+                                <a class="more-listing-link" href="#">See more</a>
                             </div>
                         </div>
                     </section>
