finish suggested groups widget

--- a/index.html
+++ b/index.html
@@ -686,7 +686,125 @@
                                     </a>
                                 </div>
 
-                                <a class="more-listing-link" href="#">See more</a>
+                                <a class="more-listing-link" href="#"
+                                    >See more</a
+                                >
+                            </div>
+                        </div>
+
+                        <div class="card suggested-groups">
+                            <div class="card-header transparent">
+                                <span>Suggested Groups</span>
+                                <a href="#">See all</a>
+                            </div>
+                            <div class="card-body fb-groups-container">
+                                <div class="card fb-group">
+                                    <div class="card-body">
+                                        <div class="fb-group-cover">
+                                            <img
+                                                src="assets/fb-groups/group-cover-1.jpg"
+                                            />
+                                            <a
+                                                class="link-to-fb-group"
+                                                href="#"
+                                            ></a>
+                                        </div>
+                                        <div class="fb-group-info">
+                                            <div class="fb-group-summary">
+                                                <div class="fb-group-name">
+                                                    <a href="#">Cat Island</a>
+                                                </div>
+                                                <span
+                                                    class="fb-group-description"
+                                                >
+                                                    1,564 members
+                                                </span>
+                                            </div>
+                                            <div class="fb-group-action">
+                                                <div class="btn fb-group-join">
+                                                    <span
+                                                        class="group-icon group-icon-join"
+                                                    ></span>
+                                                    <span
+                                                        >&nbsp;Join Group</span
+                                                    >
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="card fb-group">
+                                    <div class="card-body">
+                                        <div class="fb-group-cover">
+                                            <img
+                                                src="assets/fb-groups/group-cover-2.jpg"
+                                            />
+                                            <a
+                                                class="link-to-fb-group"
+                                                href="#"
+                                            ></a>
+                                        </div>
+                                        <div class="fb-group-info">
+                                            <div class="fb-group-summary">
+                                                <div class="fb-group-name">
+                                                    <a href="#"
+                                                        >Traveling and Life</a
+                                                    >
+                                                </div>
+                                                <span
+                                                    class="fb-group-description"
+                                                >
+                                                    25,156 members
+                                                </span>
+                                            </div>
+                                            <div class="fb-group-action">
+                                                <div class="btn fb-group-join">
+                                                    <span
+                                                        class="group-icon group-icon-join"
+                                                    ></span>
+                                                    <span
+                                                        >&nbsp;Join Group</span
+                                                    >
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="card fb-group">
+                                    <div class="card-body">
+                                        <div class="fb-group-cover">
+                                            <img
+                                                src="assets/fb-groups/group-cover-3.jpg"
+                                            />
+                                            <a
+                                                class="link-to-fb-group"
+                                                href="#"
+                                            ></a>
+                                        </div>
+                                        <div class="fb-group-info">
+                                            <div class="fb-group-summary">
+                                                <div class="fb-group-name">
+                                                    <a href="#">Landscapes</a>
+                                                </div>
+                                                <span
+                                                    class="fb-group-description"
+                                                >
+                                                    954 members
+                                                </span>
+                                            </div>
+                                            <div class="fb-group-action">
+                                                <div class="btn fb-group-join">
+                                                    <span
+                                                        class="group-icon group-icon-join"
+                                                    ></span>
+                                                    <span
+                                                        >&nbsp;Join Group</span
+                                                    >
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </section>
