finish language widget

--- a/index.html
+++ b/index.html
@@ -807,6 +807,33 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div class="card language-list">
+                            <div class="card-body">
+                                <div class="language-container">
+                                    <span class="current-language"
+                                        >English (UK)</span
+                                    >
+                                    <a class="available-language" href="#"
+                                        >English (US)</a
+                                    >
+                                    <a class="available-language" href="#"
+                                        >Español
+                                    </a>
+
+                                    <a class="available-language" href="#"
+                                        >中文(台灣)
+                                    </a>
+                                </div>
+                                <div class="language-action">
+                                    <div class="btn more-language">
+                                        <span
+                                            class="control-icon control-icon-add"
+                                        ></span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </section>
                     <section id="footer">FOOTER</section>
                 </div>
