--- a/index.html
+++ b/index.html
@@ -835,7 +835,24 @@
                             </div>
                         </div>
                     </section>
-                    <section id="footer">FOOTER</section>
+                    <section id="footer">
+                        <div class="footer-links">
+                            <a href="#">Privacy</a>
+                            <a href="#">Terms</a>
+                            <a href="#">Advertising</a>
+                            <a href="#"
+                                >AdChoices
+                                <i
+                                    class="control-icon control-icon-adchoice"
+                                ></i>
+                            </a>
+                            <a href="#">Cookies</a>
+                            <a href="#">More</a>
+                        </div>
+                        <div class="footer-copyright">
+                            Facebook © 2019 · Remaked by CVD
+                        </div>
+                    </section>
                 </div>
             </main>
         </div>
