finish stories card

--- a/index.html
+++ b/index.html
@@ -895,6 +895,72 @@
                             What's on your mind, Jelly?
                         </div>
                     </div>
+
+                    <div class="card">
+                        <div class="card-header transparent">
+                            <span>Stories</span>
+                            <a class="header-link" href="#">See all</a>
+                        </div>
+                        <div class="card-body stories">
+                            <div class="story">
+                                <img
+                                    class="story-img"
+                                    src="assets/user-avatar.png"
+                                />
+                                <div class="add-story-button rounded-img">
+                                    <span
+                                        class="control-icon control-icon-add-story"
+                                    ></span>
+                                </div>
+                                <div class="story-caption">
+                                    Add to story
+                                </div>
+                                <a class="story-link" href="#"></a>
+                            </div>
+
+                            <div class="story">
+                                <img
+                                    class="story-img"
+                                    src="assets/stories/story-1.jpg"
+                                />
+                                <div class="user-avatar rounded-img">
+                                    <img src="assets/accounts/avatar5.jpg" />
+                                </div>
+                                <div class="story-caption">
+                                    Desiree D. Dilday
+                                </div>
+                                <a class="story-link" href="#"></a>
+                            </div>
+
+                            <div class="story">
+                                <img
+                                    class="story-img"
+                                    src="assets/stories/story-3.jpg"
+                                />
+                                <div class="user-avatar rounded-img">
+                                    <img src="assets/accounts/avatar4.jpg" />
+                                </div>
+                                <div class="story-caption">
+                                    Mae C. Quijano
+                                </div>
+                                <a class="story-link" href="#"></a>
+                            </div>
+
+                            <div class="story">
+                                <img
+                                    class="story-img"
+                                    src="assets/stories/story-2.jpg"
+                                />
+                                <div class="user-avatar rounded-img">
+                                    <img src="assets/accounts/avatar3.jpg" />
+                                </div>
+                                <div class="story-caption">
+                                    Jeff J. Long
+                                </div>
+                                <a class="story-link" href="#"></a>
+                            </div>
+                        </div>
+                    </div>
                 </section>
                 <div class="side-container">
                     <section id="widgets-container">
